Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -296,5 +296,56 @@ Several limitations of this study should be acknowledged. First, because of the 
 \section{References}
 \bibliographystyle{plainnat}  
 \bibliography{Thesis}
+\section{Annex}
+
+
+% \begin{table}[h!]
+% \centering
+% \caption{Summary of Regular Debris Configurations}
+% \begin{tabular}{lcccccccccc}
+% \hline
+% Orientation & Debris & W$_{25}$ & W$_{50}$ & W$_{75}$ & W$_{IQR}$ & D$_{25}$ & D$_{50}$ & D$_{75}$ & D$_{IQR}$ \\
+% \hline
+% L & 1 & 167.04 & 193.31 & 197.95 & 30.91 & 352.92 & 407.25 & 490.14 & 137.22 \\
+% T & 1 & 81.25 & 171.64 & 344.53 & 263.29 & 184.04 & 355.62 & 522.48 & 338.44 \\
+% L & 8 & 558.17 & 649.48 & 691.21 & 133.04 & 609.51 & 686.46 & 903.40 & 293.89 \\
+% T & 8 & 345.13 & 393.83 & 504.21 & 159.08 & 587.26 & 649.83 & 728.07 & 140.82 \\
+% L & 16 & 913.31 & 1004.70 & 1374.24 & 460.93 & 587.72 & 708.77 & 844.10 & 256.38 \\
+% L & 16 & 980.85 & 1052.44 & 1131.55 & 150.70 & 586.02 & 612.58 & 652.05 & 66.03 \\
+% T & 16 & 788.03 & 921.99 & 1034.63 & 246.60 & 716.24 & 882.20 & 1236.31 & 520.07 \\
+% T & 16 & 265.07 & 340.92 & 354.42 & 89.34 & 328.09 & 335.90 & 574.36 & 246.27 \\
+% L & 24 & 1532.18 & 1678.85 & 1825.39 & 293.21 & 562.21 & 652.23 & 711.64 & 149.42 \\
+% T & 24 & 442.02 & 482.02 & 567.59 & 125.57 & 727.81 & 819.67 & 915.27 & 187.46 \\
+% \hline
+% \end{tabular}
+% \end{table}
+
+% \begin{table}[h!]
+% \centering
+% \caption{Summary of Random Debris Configurations}
+% \begin{tabular}{lcccccccccc}
+% \hline
+% Frame Ratio & Debris & W$_{25}$ & W$_{50}$ & W$_{75}$ & W$_{IQR}$ & D$_{25}$ & D$_{50}$ & D$_{75}$ & D$_{IQR}$ \\
+% \hline
+% 1.33 & 8 & 331.16 & 367.12 & 484.36 & 153.20 & 716.61 & 749.49 & 1130.89 & 414.28 \\
+% 1.00 & 8 & 284.84 & 340.64 & 408.94 & 124.10 & 463.35 & 489.94 & 866.65 & 403.29 \\
+% 1.33 & 8 & 299.65 & 399.53 & 453.30 & 153.65 & 490.65 & 558.65 & 577.21 & 86.56 \\
+% 1.00 & 8 & 235.97 & 327.54 & 450.15 & 214.18 & 502.09 & 595.74 & 920.86 & 418.77 \\
+% 0.80 & 16 & 380.02 & 661.32 & 773.58 & 393.56 & 632.19 & 786.11 & 1068.47 & 436.28 \\
+% 0.67 & 16 & 412.69 & 593.04 & 706.10 & 293.41 & 502.82 & 632.67 & 840.27 & 337.45 \\
+% 1.00 & 16 & 814.79 & 1010.74 & 1209.73 & 394.94 & 795.79 & 909.20 & 1225.13 & 429.34 \\
+% 0.80 & 16 & 309.53 & 392.86 & 496.59 & 187.06 & 395.53 & 664.13 & 798.89 & 403.37 \\
+% 0.67 & 16 & 231.79 & 359.92 & 438.89 & 207.10 & 649.03 & 757.31 & 912.40 & 263.38 \\
+% 1.00 & 16 & 510.23 & 564.05 & 882.22 & 371.99 & 527.03 & 568.83 & 877.13 & 350.10 \\
+% 0.80 & 24 & 994.75 & 1196.76 & 1512.85 & 518.10 & 624.04 & 760.26 & 1152.59 & 528.56 \\
+% 0.67 & 24 & 484.46 & 584.12 & 930.06 & 445.60 & 555.95 & 693.26 & 889.41 & 333.47 \\
+% 0.50 & 24 & 391.34 & 505.48 & 843.64 & 452.30 & 607.32 & 678.88 & 751.13 & 143.81 \\
+% 0.27 & 24 & 187.59 & 244.38 & 283.56 & 95.97 & 348.63 & 480.59 & 848.81 & 500.17 \\
+% 0.80 & 24 & 569.18 & 737.53 & 818.95 & 249.77 & 572.78 & 725.64 & 881.12 & 308.34 \\
+% 0.67 & 24 & 477.99 & 502.71 & 653.23 & 175.24 & 569.01 & 663.56 & 853.16 & 284.15 \\
+% \hline
+% \end{tabular}
+% \end{table}
+
 
 \end{document}
