Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ smaller-group tests.
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_RemappedT.png}
-        \caption{Adjusted debris count: excluding non-impacting pieces.}
+        \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:firstpeak_regular_remap}
     \end{subfigure}
     \caption{First peak forces in regular configurations split by longitudinal and transverse orientations.}
@@ -173,7 +173,7 @@ smaller-group tests.
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{LaterPeak_Regular_RemappedT.png}
-        \caption{Adjusted debris count: excluding non-impacting pieces.}
+        \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:laterpeak_regular_remap}
     \end{subfigure}
     \caption{Later peak forces  in regular configurations split by longitudinal and transverse orientations.}
@@ -195,7 +195,7 @@ Damming forces were extracted from low-pass filtered signals, capturing the sust
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-        \caption{Adjusted debris count: excluding non-impacting pieces.}
+        \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:damming_regular_remap}
     \end{subfigure}
     \caption{Damming forces  in regular configurations split by longitudinal and transverse orientations.}
