Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@ smaller-group tests.
         \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:firstpeak_regular_remap}
     \end{subfigure}
-    \caption{First peak forces in regular configurations split by longitudinal and transverse orientations.}
+    \caption{First peak forces in regular configurations for longitudinal and transverse orientations.}
     \label{fig:firstpeak_regular_split}
 \end{figure}
 
@@ -176,7 +176,7 @@ smaller-group tests.
         \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:laterpeak_regular_remap}
     \end{subfigure}
-    \caption{Later peak forces  in regular configurations split by longitudinal and transverse orientations.}
+    \caption{Later peak forces  in regular configurations for longitudinal and transverse orientations.}
     \label{fig:laterpeak_regular_split}
 \end{figure}
 
@@ -198,7 +198,7 @@ Damming forces were extracted from low-pass filtered signals, capturing the sust
         \caption{Debris count adjusted using weighting of impact likelihood..}
         \label{fig:damming_regular_remap}
     \end{subfigure}
-    \caption{Damming forces  in regular configurations split by longitudinal and transverse orientations.}
+    \caption{Damming forces  in regular configurations for longitudinal and transverse orientations.}
     \label{fig:damming_regular_split}
 \end{figure}
 
