Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -147,14 +147,14 @@ smaller-group tests.
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_SplitByTrial.png}
-        \caption{Debris count in initial configurations.}
+        \caption{Debris count in initial configurations shown in Figure~\ref{fig:configurations}.}
         \label{fig:firstpeak_regular_original}
     \end{subfigure}
     \hfill
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_RemappedT.png}
-        \caption{Debris count adjusted using weighting of impact likelihood..}
+        \caption{Debris count adjusted using weighting of impact likelihood.}
         \label{fig:firstpeak_regular_remap}
     \end{subfigure}
     \caption{First peak forces in regular configurations for longitudinal and transverse orientations.}
@@ -166,14 +166,14 @@ smaller-group tests.
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{LaterPeak_Regular_SplitByTrial.png}
-        \caption{Debris count in initial configurations.}
+        \caption{Debris count in initial configurations shown in Figure~\ref{fig:configurations}.}
         \label{fig:laterpeak_regular_original}
     \end{subfigure}
     \hfill
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{LaterPeak_Regular_RemappedT.png}
-        \caption{Debris count adjusted using weighting of impact likelihood..}
+        \caption{Debris count adjusted using weighting of impact likelihood.}
         \label{fig:laterpeak_regular_remap}
     \end{subfigure}
     \caption{Later peak forces  in regular configurations for longitudinal and transverse orientations.}
@@ -188,14 +188,14 @@ Damming forces were extracted from low-pass filtered signals, capturing the sust
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Damming_Regular_SplitByTrial.png}
-        \caption{Debris count in initial configurations.}
+        \caption{Debris count in initial configurations shown in Figure~\ref{fig:configurations}.}
         \label{fig:damming_regular_original}
     \end{subfigure}
     \hfill
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-        \caption{Debris count adjusted using weighting of impact likelihood..}
+        \caption{Debris count adjusted using weighting of impact likelihood.}
         \label{fig:damming_regular_remap}
     \end{subfigure}
     \caption{Damming forces  in regular configurations for longitudinal and transverse orientations.}
